<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/androidQuiz"
                android:textSize="24sp"

                android:textColor="@android:color/black"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/result_TextView"
                android:layout_marginStart="56dp"
                android:textSize="24sp"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/attempToAnswer"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_1"
                android:textSize="16sp"
                android:text="@string/question_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/question_1"
                android:layout_marginStart="16dp"
                android:visibility="gone"

                android:id="@+id/answer_1"
                android:textSize="14sp"

                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:id="@+id/answer1_RadioGroup"
                android:layout_below="@+id/question_1"


                >

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer1A_Button"
                    android:text="@string/a_apple"
                    android:checked="true"

                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer1B_Button"
                    android:text="@string/b_google" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer1C_Button"
                    android:text="@string/c_android_inc" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer1D_Button"
                    android:text="@string/d_nokia"

                    />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_2"
                android:textSize="16sp"
                android:text="@string/question_2" />

            <TextView
                android:id="@+id/answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/question_2"
                android:layout_marginStart="16dp"
                android:visibility="gone"


                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:id="@+id/answer2_RadioGroup"

                android:layout_below="@+id/question_2"

                >


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer2A_Button"
                    android:text="@string/a_apple"
                    android:checked="true"

                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer2B_Button"
                    android:text="@string/b_no_Company" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer2C_Button"
                    android:text="@string/C_Nokia" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer2D_Button"
                    android:text="@string/d_Google" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_3"
                android:textSize="16sp"
                android:text="@string/question_3" />

            <TextView
                android:id="@+id/answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/question_3"
                android:layout_marginStart="16dp"
                android:visibility="gone"


                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:id="@+id/answer3_RadioGroup"
                android:layout_below="@+id/question_3"


                >

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer3A_Button"
                    android:text="@string/a_desktopOperatingSystem"
                    android:checked="true"

                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer3B_Button"

                    android:text="@string/b_ProgrammingLanguage" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer3C_Button"
                    android:text="@string/c_MobileOperatingSystem" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer3D_Button"
                    android:text="@string/d_Database" />
            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_4"
                android:textSize="16sp"
                android:text="@string/question_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_toEndOf="@+id/question_4"
                android:layout_marginStart="16dp"
                android:id="@+id/answer_4"
                android:visibility="gone"

                android:textSize="14sp"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/question_4">

                <CheckBox
                    android:id="@+id/a_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_Windows" />

                <CheckBox
                    android:id="@+id/b_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_Mac" />

                <CheckBox
                    android:id="@+id/c_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_Linux" />

                <CheckBox
                    android:id="@+id/d_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_Contiki" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_5"
                android:textSize="16sp"
                android:text="@string/question_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/question_5"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                android:id="@+id/answer_5"
                android:textSize="14sp"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer5_EditText"
                android:layout_below="@+id/question_5"
                android:hint="@string/writeYourAnswer" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_Button"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>